js/js.translator/testData/incremental/invalidation/companionPropertiesWithIntraModuleInliner/lib2/l2string.4.kt
inline fun testStringProperty(): Int {
    return 0
}
